--- a/src/index.css
+++ b/src/index.css
@@ -18,9 +18,9 @@
     }
 
     .sidebar-item {
-        @apply flex h-[40px] w-full flex-shrink-0 items-center gap-x-3 rounded-lg p-3 text-base font-medium text-slate-900 transition-colors hover:bg-blue-50 dark:text-slate-50 dark:hover:bg-blue-950;
+        @apply flex h-[40px] w-full flex-shrink-0 items-center gap-x-3 rounded-lg p-3 text-base font-medium text-slate-900 transition-colors hover:bg-gray-50 dark:text-slate-50 dark:hover:bg-blue-950;
         &.active {
-            @apply bg-blue-500 text-slate-50 dark:bg-blue-600;
+            @apply bg-blue-100 text-blue-600 dark:bg-blue-900 dark:text-blue-100 dark:hover:bg-blue-900;
         }
     }
 
@@ -37,11 +37,11 @@
     }
 
     .input {
-        @apply hidden h-10 flex-shrink-0 items-center gap-x-2 rounded-lg border border-slate-300 px-2 text-base text-slate-900 transition-colors has-[input:focus]:border-blue-500 md:flex md:w-auto lg:w-80 dark:border-slate-700 dark:text-slate-50 dark:focus:border-blue-600;
+        @apply hidden h-10 flex-shrink-0 items-center gap-x-2 rounded-lg border border-slate-300 px-2 text-base text-slate-900 transition-colors has-[input:focus]:border-blue-500 dark:border-slate-700 dark:text-slate-50 dark:focus:border-blue-600 md:flex md:w-auto lg:w-80;
     }
 
     .card {
-        @apply flex flex-col gap-y-4 rounded-lg border border-slate-300 bg-white p-4 transition-colors dark:border-slate-700 dark:bg-slate-900;
+        @apply flex flex-col gap-y-4 rounded-2xl border border-gray-200 bg-white p-4 transition-colors dark:border-slate-800 dark:bg-slate-900;
     }
 
     .card-header {
