--- a/src/index.css
+++ b/src/index.css
@@ -19,9 +19,14 @@
 
     .sidebar-item {
         @apply flex h-[40px] w-full flex-shrink-0 items-center gap-x-3 rounded-lg p-3 text-base font-medium text-slate-900 transition-colors hover:bg-gray-50 dark:text-slate-50 dark:hover:bg-blue-950;
-        &.active {
-            @apply bg-blue-100 text-blue-600 dark:bg-blue-900 dark:text-blue-100 dark:hover:bg-blue-900;
-        }
+        /* &.active {
+        } */
+    }
+    .sidebar-item-active {
+        @apply bg-blue-100 text-blue-600 dark:bg-blue-900 dark:text-blue-100 dark:hover:bg-blue-900;
+    }
+    .sidebar-item-dashboard {
+        @apply flex h-[40px] w-full flex-shrink-0 items-center gap-x-3 rounded-lg p-3 text-base font-medium text-slate-900 transition-colors hover:bg-gray-50 dark:text-slate-50 dark:hover:bg-blue-950;
     }
 
     .title {
